--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,48 @@
 services:
+  web:
+    build:
+      context: .
+      dockerfile: deployment/Dockerfile-django
+    container_name: mouse-tracks-web
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      - ENV=docker_local
+      - DB_HOST=db
+    volumes:
+      - ./static:/static
+      - ./media:/media
+    command: bash -c "python manage.py collectstatic --no-input && gunicorn --workers=5 config.wsgi -b 0.0.0.0:8888"
+    restart: always
+  nginx:
+    build:
+      context: .
+      dockerfile: deployment/Dockerfile-nginx
+    container_name: mouse-tracks-nginx
+    depends_on:
+      web:
+        condition: service_started
+    volumes:
+      - ./deployment/django.conf:/etc/nginx/conf.d/django.conf
+      - ./logs:/service/logs
+      - ./static:/service/static
+      - ./media:/service/media
+    ports:
+      - "8080:80"
+    links:
+      - web
+    restart: always
   db:
-    container_name: "moustracks_db"
+    container_name: "mouse-tracks-db"
     image: postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
       POSTGRES_USER: '${POSTGRES_USER}'
       POSTGRES_DB: '${POSTGRES_DB}'
+    healthcheck:
+      test: "exit 0"
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
