feat: added auth to the app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     restart: always
   db:
     container_name: "mouse-tracks-db"
-    image: postgres
+    image: postgres:15
     restart: always
     environment:
       POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
